--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/plugins/malihu-custom-scrollbar/css/jquery.mCustomScrollbar.css" />
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/css/common.css" />
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/css/hompage.css" />
-	 <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/css/lity.min.css" />
+    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/css/lity.min.css" />
     <script src='https://www.google.com/recaptcha/api.js?onload=myCallBack&render=explicit' async defer></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="~/Scripts/User/GoogleCaptcha.js" defer></script>
@@ -165,8 +165,8 @@
                         <li><a href="#offering"><span>Consulting</span></a></li>
                         <li><a href="#offering"><span>Communication</span></a></li>
                         <li><a href="#offering"><span>Content</span></a></li>
-						<li><a href="#offering"><span>Media</span></a></li>
-						<li><a href="#offering"><span>Influence</span></a></li>
+                        <li><a href="#offering"><span>Media</span></a></li>
+                        <li><a href="#offering"><span>Influence</span></a></li>
                         <li><a href="#offering"><span>Technology</span></a></li>
                         <li><a href="#offering"><span>Experiences</span></a></li>
                         <li><a href="#offering"><span>Marketing Sciences</span></a></li>
@@ -208,7 +208,15 @@
                         <li><a class="hashScroll" href="#showreel"><span>Showreel</span></a></li>
                     </ul>
                 </li>
-                <li class="main-nav"><a class="hashScroll" href="#xms"><span>XMS</span></a> </li>
+                <li class="main-nav">
+                    <a class="hashScroll" href="#AugmentedReality"><span title="Experiential Solution">Experiential</span></a>
+                    <ul class="sub-nav">
+                        <li><a class="hashScroll" href="#AugmentedReality"><span>AR/MR</span></a></li>
+                        <li><a class="hashScroll" href="#Voice"><span>Voice </span></a></li>
+                        <li><a class="hashScroll" href="#xms"><span>XMS</span></a></li>
+
+                    </ul>
+                </li>
                 <li class="main-nav"><a class="hashScroll" href="#sparktlive"><span>Sparkt Live</span></a> </li>
                 <li class="main-nav"><a class="hashScroll" href="#contact"><span>Get In Touch</span></a> </li>
             </ul>
@@ -379,8 +387,8 @@
     <script type="text/javascript" src="~/Content/plugins/scrollmagic/js/plugins/animation.gsap.min.js"></script>
     <script type="text/javascript" src="~/Content/plugins/scrollmagic/js/plugins/debug.addIndicators.min.js"></script>
     <script type="text/javascript" src="~/Content/plugins/swiper-4.2.6/js/swiper.min.js"></script>
-	 <script type="text/javascript" src="~/Scripts/lity.min.js"></script>
-    <script type="text/javascript" src="~/Content/js/functions.js" defer></script>
+    <script type="text/javascript" src="~/Scripts/lity.min.js"></script>
+    <script type="text/javascript" src="~/Content/js/functions.js"></script>
     @*<script src="~/Scripts/jquery-1.10.2.min.js"></script>*@
     <script src="~/Scripts/User/SparktHelper.js" defer></script>
     <script>
@@ -430,7 +438,7 @@
                 }
             });
 
-            
+
         });
     </script>
 </body>
