--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -85,7 +85,7 @@
                 <li><a href="/#we"><span>We</span></a> </li>
                 <li><a href="/#clients"><span>Clients</span></a> </li>
                 <li><a href="/#work"><span>Work</span></a> </li>
-                <li><a href="/#xms"><span>XMS</span></a> </li>
+                <li><a href="/#AugmentedReality"><span title="Experiential Solutions">Experiential</span></a> </li>
                 <li><a href="/#sparktlive"><span>Sparkt Live</span></a> </li>
                 <li><a href="/#contact"><span>Get In Touch</span></a> </li>
             </ul>
