--- a/Sparkt.WebApp/Views/work/Swp.cshtml
+++ b/Sparkt.WebApp/Views/work/Swp.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "https://sparkt.in/work/Swp";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/swp-thum.jpg";
 }
-@section BodyClass {star}
+@section BodyClass {star-plus}
 <main>
     <div class="section">
         <div class="work-banner">
@@ -21,7 +21,7 @@
                 <h1>STAR WRITERS PROGRAM</h1>
                 <div class="clear"></div>
                 <span>Creating India's first university program for creative writers</span>
-            </div>           
+            </div>
         </div>
         @Html.Partial("_WorkMenu")
 
@@ -50,7 +50,8 @@
                                             <!--<source  src="media/desktop.mp4" type="video/mp4" >
                                             <source src="media/desktop.ogg" type="video/ogg" >-->
                                         </video>
-                                        <script> document.getElementById( "desktop" ).controls = false;
+                                        <script>
+ document.getElementById( "desktop" ).controls = false;
                                         </script>
                                     </div>
                                     <div class="mobile-video">
@@ -58,7 +59,8 @@
                                             <!--<source  src="media/mobile.mp4" type="video/mp4" >
                                             <source src="media/mobile.ogg" type="video/ogg" >-->
                                         </video>
-                                        <script>document.getElementById("mobile").controls = false;
+                                        <script>
+document.getElementById("mobile").controls = false;
                                         </script>
                                     </div>
 
