--- a/Sparkt.WebApp/Views/work/Yaarii.cshtml
+++ b/Sparkt.WebApp/Views/work/Yaarii.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "https://sparkt.in/work/Yaarii";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/yaarii-thum.jpg";
 }
-@section BodyClass {yaarii}
+@section BodyClass {indiabulls}
 
 <main>
     <div class="section">
