--- a/Sparkt.WebApp/Views/work/Yaariifilms.cshtml
+++ b/Sparkt.WebApp/Views/work/Yaariifilms.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
 }
 
-@section BodyClass {yaarii}
+@section BodyClass {indiabulls}
 <main>
     <div class="section">
         <div class="work-banner">
@@ -63,7 +63,7 @@
                                     </div>
                                     <div class="video-nav">
                                         <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://img.youtube.com/vi/EF64f3jGxEY/maxresdefault.jpg" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://img.youtube.com/vi/v3NuYe-zyIQ/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="https://img.youtube.com/vi/XVPPfwQ1OsA/maxresdefault.jpg" alt="" /></a> </div>
                                         <div class="nav-item"><a href="#" class="hvr-grow"><img src="http://img.youtube.com/vi/h4bVHzqloZs/maxresdefault.jpg" alt="" /></a> </div>
 
                                     </div>
