--- a/Sparkt.WebApp/Views/work/BirlaWhiteRepaintPutty.cshtml
+++ b/Sparkt.WebApp/Views/work/BirlaWhiteRepaintPutty.cshtml
@@ -8,7 +8,7 @@
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/birla-wall-putty-thum.jpg";
 }
 
-@section BodyClass {birlawhiteputty}
+@section BodyClass {others}
 
 <main>
     <div class="section">
