--- a/Sparkt.WebApp/Views/work/Dubsmash.cshtml
+++ b/Sparkt.WebApp/Views/work/Dubsmash.cshtml
@@ -6,7 +6,7 @@
     ViewBag.MetaURL = "https://sparkt.in/work/Dubsmash";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/dubsmash-thum.jpg";
 }
-@section BodyClass {dubsmash}
+@section BodyClass {others}
 
 <main>
     <div class="section">
