--- a/Sparkt.WebApp/Views/work/EditageInsights.cshtml
+++ b/Sparkt.WebApp/Views/work/EditageInsights.cshtml
@@ -8,7 +8,7 @@
     ViewBag.MetaURL = "https://sparkt.in/work/editinsights";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/editage-thum.jpg";
 }
-@section BodyClass {editage}
+@section BodyClass {others}
 <script type="application/ld+json">
     {
     "@@context": "https://schema.org",
