--- a/Sparkt.WebApp/Views/work/MGage.cshtml
+++ b/Sparkt.WebApp/Views/work/MGage.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "https://sparkt.in/work/MGage";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mGage-thum.jpg";
 }
-
+@section BodyClass {others}
 <main>
     <div class="section">
         <div class="work-banner">
@@ -21,7 +21,7 @@
                 <h1><span style="text-transform:lowercase">m</span>G<span style="text-transform:lowercase">age</span> India</h1>
                 <div class="clear"></div>
                 <span>Powered by insights. Driven by mobile.</span>
-            </div>           
+            </div>
         </div>
         @Html.Partial("_WorkMenu")
 
@@ -52,7 +52,8 @@
                                             <!--<source  src="media/desktop.mp4" type="video/mp4" >
                                             <source src="media/desktop.ogg" type="video/ogg" >-->
                                         </video>
-                                        <script> document.getElementById( "desktop" ).controls = false;
+                                        <script>
+    document.getElementById("desktop").controls = false;
                                         </script>
                                     </div>
                                     <div class="mobile-video">
@@ -60,7 +61,8 @@
                                             <!--<source  src="media/mobile.mp4" type="video/mp4" >
                                             <source src="media/mobile.ogg" type="video/ogg" >-->
                                         </video>
-                                        <script>document.getElementById("mobile").controls = false;
+                                        <script>
+    document.getElementById("mobile").controls = false;
                                         </script>
                                     </div>
 
