--- a/Sparkt.WebApp/Views/work/Nutrela.cshtml
+++ b/Sparkt.WebApp/Views/work/Nutrela.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/nutrela.php";
     ViewBag.MetaImage = "http://sparkt.in/work/images/thums/yaarii-thum.jpg";
 }
-@section BodyClass {nutrela}
+@section BodyClass {others}
 <main>
     <div class="section">
         <div class="work-banner">
