--- a/Sparkt.WebApp/Views/work/OnePlus.cshtml
+++ b/Sparkt.WebApp/Views/work/OnePlus.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "https://sparkt.in/work/OnePlus";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/oneplus-thum.jpg";
 }
-@section BodyClass {one-plus}
+@section BodyClass {others}
 <script type="application/ld+json">
     {
     "@@context": "https://schema.org",
@@ -43,7 +43,7 @@
                 <h1>OnePlus</h1>
                 <div class="clear"></div>
                 <span>The power of 5 in customer care</span>
-            </div>            
+            </div>
         </div>
         @Html.Partial("_WorkMenu")
     </div>
@@ -129,11 +129,11 @@
         </div>
         <div class="container">
             @*<div class="quotes-wrapp">
-                <div class="quotes">
-                    <h3></h3>
-                    <span class="quotes-writer"></span>
-                </div>
-            </div>*@
+                    <div class="quotes">
+                        <h3></h3>
+                        <span class="quotes-writer"></span>
+                    </div>
+                </div>*@
         </div>
     </div>
 </main>
