--- a/Sparkt.WebApp/Views/work/Pedderjohnson.cshtml
+++ b/Sparkt.WebApp/Views/work/Pedderjohnson.cshtml
@@ -6,7 +6,7 @@
     ViewBag.MetaURL = "https://sparkt.in/work/Pedderjohnson";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/pedderjohnson-thum.jpg";
 }
-@section BodyClass {pedderjohnson}
+@section BodyClass {others}
 
 <main>
     <div class="section">
