--- a/Sparkt.WebApp/Views/Home/Index - Copy.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index - Copy.cshtml
@@ -890,7 +890,7 @@
                         </div>
 
                     </div>
-                    <div class="swiper-pagination swiper-pagination-v"></div>=
+                    <div class="swiper-pagination swiper-pagination-v"></div>
                 </div>
             </div>
 
@@ -933,15 +933,13 @@
                     @*<li><a href="@Url.Action("Yaarii","work")"><img src="~/Content/images/clients/yaarii.png" alt="yaarii" /></a></li>*@
 
                     <li>
-
-                        <a  href="@Url.Action("sarva-campaign","work")"><img src="~/Content/images/clients/sarve.png" alt="Sarva" /></a>
+                        <a style="cursor:default"><img src="~/Content/images/clients/sarve.png" alt="Sarve" /></a>
                     </li>
                     <li>
                         <a href="@Url.Action("sky","work")"><img src="~/Content/images/clients/indiabulls-logo.png" alt="Indiabulls Real Estate" /></a>
                     </li>
                     <li><a style="cursor:default"><img src="~/Content/images/clients/eurokids.png" alt="Euro Kids" /></a></li>
-
-
+                    @**@
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/star-bharat-logo.png" alt="Star Bharat" /></a>
                     </li>
@@ -949,11 +947,6 @@
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/bharti-axa-logo.png" alt="Bharti AXA" /></a>
                     </li>
-
-
-
-
-
                     <li>
                         <a href="@Url.Action("Pchf","work")"><img src="~/Content/images/clients/piramal-Capital-housing.png" alt="Piramal Capital Housing" /></a>
                     </li>
@@ -968,12 +961,10 @@
                         <a href="@Url.Action("USports","work")"><img src="~/Content/images/clients/uSports-logo.png" alt="U Sports" /></a>
                     </li>
 
-                    <li><a style="cursor:default"><img src="~/Content/images/clients/pro-kabaddi.png" alt="Pro Kabaddi" /></a></li>
-
-
-                    @* <li>
+                    @*<li>
                             <a href="@Url.Action("EditageInsights","work")"><img src="~/Content/images/clients/editage.png" alt="editage" /></a>
                         </li>*@
+                    <li><a style="cursor:default"><img src="~/Content/images/clients/pro-kabaddi.png" alt="Pro Kabaddi" /></a></li>
                     <li>
                         <a href="@Url.Action("Dubsmash","work")"><img src="~/Content/images/clients/dubsmash.png" alt="Dubsmash" /></a>
                     </li>
@@ -1085,17 +1076,6 @@
                                         <img src="~/Content/work/images/thums/mmf-pragati-yojana-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>Mahindra Pragati Bluechip Yojana</h4>
-                                            <p>A fresh look at yoga.</p>
-                                        </div>
-                                    </a>
-                                </li>
-
-
-                                <li>
-                                    <a href="@Url.Action("sarva-campaign","work")">
-                                        <img src="~/Content/work/images/thums/sarva-campaign-thum.jpg" alt="Sarva Campaign" />
-                                        <div class="caption">
-                                            <h4>Sarva</h4>
                                             <p>Launching a new fund through unconventional content formats.</p>
                                         </div>
                                     </a>
@@ -1450,18 +1430,6 @@
                                         </div>
                                     </a>
                                 </li>
-
-                                <li>
-                                    <a href="@Url.Action("mmf-app","work")">
-                                        <img src="~/Content/work/images/thums/mmf-app-thum.jpg" alt="">
-                                        <div class="caption">
-                                            <h4>Mahindra Mutual Fund</h4>
-                                            <p>On the move</p>
-                                        </div>
-                                    </a>
-                                </li>
-
-
                                 <li>
                                     <a href="@Url.Action("TheVoice","work")">
                                         <img src="~/Content/work/images/thums/thevoice-thum.jpg" alt="">
@@ -1664,19 +1632,6 @@
                                         </div>
                                     </a>
                                 </li>
-
-
-
-                                <li>
-                                    <a href="@Url.Action("birla-excel-putty","work")">
-                                        <img src="~/Content/work/images/thums/birla-excel-putty-thum.jpg" />
-                                        <div class="caption">
-                                            <h4>Birla Excel Putty	</h4>
-                                            <p>Seeing is believing</p>
-                                        </div>
-                                    </a>
-                                </li>
-
                                 <li>
                                     <a href="@Url.Action("nutrela","work")">
                                         <img src="~/Content/work/images/thums/ruchi-soya-thum.jpg" alt="">
@@ -1861,18 +1816,19 @@
                                 </li>
                             </ul>
                         </div>
+
                         <!-- <div class="resp-tab-content" id="Work-Media"> -->
-                        <!-- <ul> -->
-                        <!-- <li> -->
-                        <!-- <a href="@Url.Action("UCypher","work")"> -->
-                        <!-- <img src="~/Content/work/images/thums/ucypher-thum.jpg" alt=""> -->
-                        <!-- <div class="caption"> -->
-                        <!-- <h4>UCYPHER</h4> -->
-                        <!-- <p>Naya Sport. Naye Superstars.</p> -->
-                        <!-- </div> -->
-                        <!-- </a> -->
-                        <!-- </li> -->
-                        <!-- </ul> -->
+                            <!-- <ul> -->
+                                <!-- <li> -->
+                                    <!-- <a href="@Url.Action("UCypher","work")"> -->
+                                        <!-- <img src="~/Content/work/images/thums/ucypher-thum.jpg" alt=""> -->
+                                        <!-- <div class="caption"> -->
+                                            <!-- <h4>UCYPHER</h4> -->
+                                            <!-- <p>Naya Sport. Naye Superstars.</p> -->
+                                        <!-- </div> -->
+                                    <!-- </a> -->
+                                <!-- </li> -->
+                            <!-- </ul> -->
                         <!-- </div> -->
                     </div>
                 </div>
@@ -2614,7 +2570,7 @@
                                         <span class="error" id="spnPhoneNumber" style="display:none">Phone No is required.</span>
                                         <label for="txtPhoneNumber">Call me on</label>
                                     </div>
-                                    <div class="input-field col s12 m12 l8">
+                                    <div class="input-field col s12 m6 l4">
                                         <select id="drpConsultationType">
                                             <option value="" disabled selected>Select a Category</option>
                                             <option value="1">Join Sparkt</option>
@@ -2625,10 +2581,23 @@
                                         </select>
 
                                     </div>
+                                    <div class="file-field input-field col s12 m6 l4" id="dvResume" style="display:none">
+
+                                        <div class="btn">
+                                            <span>Resume <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></span>
+                                            <input type="file" id="fileResume" accept="application/pdf" multiple>
+
+                                        </div>
+                                        <div class="file-path-wrapper">
+                                            <input class="file-path validate" type="text" id="txtResume" placeholder="Upload a pdf file">
+                                        </div>
+                                        <span class="error" id="spnResume" style="display:none">Please upload resume.</span>
+                                    </div>
+
                                     <div class="input-field col s12">
                                         <textarea id="txtMessage" class="materialize-textarea" maxlength="500"></textarea>
                                         <span class="error" id="spnMessage" style="display:none">Message is required.</span>
-                                        <label for="txtMessage">Your message here!</label>
+                                        <label id="lblMessage" for="txtMessage">Your message here!</label>
                                     </div>
                                     <div class="input-field col s12">
                                         <div class="g-recaptcha" id="recaptcha1" data-theme="light" style="transform:scale(0.77);-webkit-transform:scale(0.77);transform-origin:0 0;-webkit-transform-origin:0 0;"></div>
