--- a/Sparkt.WebApp/Views/work/TheVoice.cshtml
+++ b/Sparkt.WebApp/Views/work/TheVoice.cshtml
@@ -11,9 +11,12 @@
     <div class="section">
         <div class="work-banner">
             <div class="banner-source">
-                <div class="banner-video  middle-align" style="background-image: url('/Content/work/images/banners/thevoice-cover.jpg');">
+                <div class="banner-video">
+                    <video class="bannerplayer" poster="/Content/work/images/banners/thevoice-cover.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                        <source type="video/youtube" src="https://youtu.be/ZO0zyEN57o0" />
+                    </video>
                 </div>
-
+                <div class="banner-image" style="background-image: url(/Content/work/images/banners/thevoice-cover.jpg);"> </div>
             </div>
             <div class="head-title floated">
                 <i class="title-icon"><img src="/Content/work/images/title-icon.png" alt="" /></i>
