Bharti Axa Policy Page Addition 30Mar2020

--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -1692,7 +1692,7 @@
                                         </div>
                                     </a>
                                 </li>
-								<li>
+                                <li>
                                     <a href="@Url.Action("Bharti-AXA","work")">
                                         <img src="~/Content/work/images/thums/bharti-axa-thum.jpg" alt="">
                                         <div class="caption">
@@ -1878,6 +1878,15 @@
                                         <div class="caption">
                                             <h4>Nazar</h4>
                                             <p>Building intrigue through content</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("BhartiAxaPolicy","work")">
+                                        <img src="~/Content/work/images/thums/bharti-axa-policy-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Bharti AXA</h4>
+                                            <p>Policy Redesign</p>
                                         </div>
                                     </a>
                                 </li>
