--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -118,9 +118,10 @@
         <ul id="times-network" class="horizontalScroll">
           <li class="fadeRight t-animated" data-t-show="1"><a  class="hvr-grow-shadow"><img src="images/thums/nach-baliye-8-thum.jpg" alt=""/> <span>Times Network</span> </a> </li>
         </ul>*@
-        <ul id="bhartiaxa" class="horizontalScroll">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Bharti-Axa","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/bharti-axa-thum.jpg" alt="" /> <span>Bharti AXA</span> </a> </li>
-		</ul>
+    <ul id="bhartiaxa" class="horizontalScroll">
+        <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Bharti-Axa","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/bharti-axa-thum.jpg" alt="" /> <span>Bharti AXA</span> </a> </li>
+        <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("BhartiAxaPolicy","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/bharti-axa-policy-thum.jpg" alt="" /> <span>Bharti AXA Policy</span> </a> </li>
+    </ul>
 		<ul id="indiabulls" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("sky","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/sky-thum.jpg" alt="" /> <span>Sky</span> </a> </li>
 
