--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -913,7 +913,7 @@
                     <h3>THOSE WHO BELIEVE IN US</h3>
                 </div>
                 <ul>
-				
+
                     <li class="demo-3">
                         <a href="@Url.Action("MahindraMF","work")"><img src="~/Content/images/clients/mahindra-mf-logo.png" alt="mahindra Mutual fund" /></a>
                     </li>
@@ -928,107 +928,102 @@
 
                     <li> <a style="cursor:default"><img src="~/Content/images/clients/nasivion.png" alt="nasivion" /></a> </li>
                     <li>
-                        <a style="cursor:default"><img src="~/Content/images/clients/divayoga.png" alt="Divayoga" /></a>
+                        <a style="cursor:default"><img src="~/Content/images/clients/evion-logo.png" alt="Evion" /></a>
                     </li>
-
+                    <li>
+                        <a style="cursor:default"><img src="~/Content/images/clients/livogen.png" alt="Livogen" /></a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("Pchf","work")"><img src="~/Content/images/clients/piramal-Capital-housing.png" alt="Piramal Capital Housing" /></a>
+                    </li>
                     @*<li><a href="@Url.Action("Yaarii","work")"><img src="~/Content/images/clients/yaarii.png" alt="yaarii" /></a></li>*@
-
-                    <li>
-					
-                        <a href="@Url.Action("sarva-campaign","work")"><img src="~/Content/images/clients/sarve.png" alt="Sarve" /></a>
-                    </li>
-                    <li>
-                        <a href="@Url.Action("sky","work")"><img src="~/Content/images/clients/indiabulls-logo.png" alt="Indiabulls Real Estate" /></a>
-                    </li>
                     <li><a style="cursor:default"><img src="~/Content/images/clients/eurokids.png" alt="Euro Kids" /></a></li>
 
 
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/star-bharat-logo.png" alt="Star Bharat" /></a>
                     </li>
-
                     <li>
                         <a href="@Url.Action("bharti-axa","work")"><img src="~/Content/images/clients/bharti-axa-logo.png" alt="Bharti AXA" /></a>
                     </li>
 
-
-
-
-
                     <li>
-                        <a href="@Url.Action("Pchf","work")"><img src="~/Content/images/clients/piramal-Capital-housing.png" alt="Piramal Capital Housing" /></a>
+                        <a href="@Url.Action("sky","work")"><img src="~/Content/images/clients/indiabulls-logo.png" alt="Indiabulls Real Estate" /></a>
                     </li>
+                    <li>
+                        <a href="@Url.Action("Dubsmash","work")"><img src="~/Content/images/clients/dubsmash.png" alt="Dubsmash" /></a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("sarva-campaign","work")"><img src="~/Content/images/clients/sarve.png" alt="Sarve" /></a>
+                    </li>
+                    <li>
+                        <a style="cursor:default"><img src="~/Content/images/clients/divayoga.png" alt="Divayoga" /></a>
+                    </li>
+
                     <li>
                         <a href="@Url.Action("piramalfoundation","work")"><img src="~/Content/images/clients/piramal-foundation.png" alt="Piramal Foundation" /></a>
                     </li>
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/piramalRealty-logo.png" alt="Piramal Realty" /></a>
                     </li>
-					<li>
-                        <a style="cursor:default"><img src="~/Content/images/clients/evion-logo.png" alt="Evion" /></a>
-                    </li>
-					<li><a style="cursor:default"><img src="~/Content/images/clients/pro-kabaddi.png" alt="Pro Kabaddi" /></a></li>
-					<li>
-                        <a href="@Url.Action("Dubsmash","work")"><img src="~/Content/images/clients/dubsmash.png" alt="Dubsmash" /></a>
-                    </li>
-					<li>
+
+                    <li><a style="cursor:default"><img src="~/Content/images/clients/pro-kabaddi.png" alt="Pro Kabaddi" /></a></li>
+
+                    <li>
                         <a href="@Url.Action("USports","work")"><img src="~/Content/images/clients/uSports-logo.png" alt="U Sports" /></a>
                     </li>
-					<li>
+                    <li>
                         <a href="@Url.Action("OnePlus","work")"><img src="~/Content/images/clients/one-plus-logo.png" alt="One Plus" /></a>
                     </li>
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/star-utsav.png" alt="Star Utsav" /></a>
                     </li>
                     <li> <a style="cursor:default"><img src="~/Content/images/clients/evolis.png" alt="Evolis" /></a> </li>
-					<li>
+                    @*<li>
                         <a style="cursor:default"><img src="~/Content/images/clients/fanatic-sports.png" alt="Fanatic Sports" /></a>
-                    </li>
-					
-					
-
-                    @*<li>
-                        <a href="@Url.Action("Pedderjohnson","work")"><img src="~/Content/images/clients/pedder.png" alt="Pedder" /></a>
                     </li>*@
-                    @*<li>
-                            <a href="@Url.Action("brickex","work")"><img src="~/Content/images/clients/brickex-logo.png" alt="Brickex" /></a>
-                        </li>*@
+
 
 
                     @*<li>
-                            <a style="cursor:default"><img src="~/Content/images/clients/dabang-logo.png" alt="Dabang" /></a>
-                        </li>*@
-					@* <li>
-                            <a href="@Url.Action("EditageInsights","work")"><img src="~/Content/images/clients/editage.png" alt="editage" /></a>
-                        </li>*@
-                    
+            <a href="@Url.Action("Pedderjohnson","work")"><img src="~/Content/images/clients/pedder.png" alt="Pedder" /></a>
+        </li>*@
+                    @*<li>
+            <a href="@Url.Action("brickex","work")"><img src="~/Content/images/clients/brickex-logo.png" alt="Brickex" /></a>
+        </li>*@
+
 
                     @*<li>
-                            <a href="@Url.Action("UCypher","work")"><img src="~/Content/images/clients/uCypher-logo.png" alt="U Cypher" /></a>
-                        </li>*@
+            <a style="cursor:default"><img src="~/Content/images/clients/dabang-logo.png" alt="Dabang" /></a>
+        </li>*@
+                    @* <li>
+            <a href="@Url.Action("EditageInsights","work")"><img src="~/Content/images/clients/editage.png" alt="editage" /></a>
+        </li>*@
+
+
+                    @*<li>
+            <a href="@Url.Action("UCypher","work")"><img src="~/Content/images/clients/uCypher-logo.png" alt="U Cypher" /></a>
+        </li>*@
 
                     <!--<li>
-                        <a style="cursor:default"><img src="~/Content/images/clients/imprezz.png" alt="Imprezz" /></a>
-                    </li>-->
+        <a style="cursor:default"><img src="~/Content/images/clients/imprezz.png" alt="Imprezz" /></a>
+    </li>-->
                     <!-- <li> -->
                     <!-- <a style="cursor:default"><img src="~/Content/images/clients/lkp-logo.png" alt="LKP" /></a> -->
                     <!-- </li> -->
-
-                    
+                    @*<li>
+            <a href="@Url.Action("IndiaRF","work")"><img src="~/Content/images/clients/rf-india-logo.png" alt="RF India" /></a>
+        </li>*@
 
                     @*<li>
-                            <a href="@Url.Action("IndiaRF","work")"><img src="~/Content/images/clients/rf-india-logo.png" alt="RF India" /></a>
-                        </li>*@
-
-                    @*<li>
-                            <a href="@Url.Action("Phfl","work")"><img src="~/Content/images/clients/phfl-logo.png" alt="Piramal Housing Finance" /></a>
-                        </li>*@
+            <a href="@Url.Action("Phfl","work")"><img src="~/Content/images/clients/phfl-logo.png" alt="Piramal Housing Finance" /></a>
+        </li>*@
 
                     @*<li> <a tyle="cursor:default"><img src="~/Content/images/clients/u-mumba.png" alt="u-mumba" /></a> </li>*@
                     @*<li> <a tyle="cursor:default"><img src="~/Content/images/clients/u-dream.png" alt="u-dream" /></a> </li>*@
                     @*<li>
-                            <a href="@Url.Action("bql","work")"><img src="~/Content/images/clients/indo-count-logo.png" alt="Boutique Living" /></a>
-                        </li>*@
+            <a href="@Url.Action("bql","work")"><img src="~/Content/images/clients/indo-count-logo.png" alt="Boutique Living" /></a>
+        </li>*@
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/your-brand-here.png" alt="Your Brand is here" /></a>
                     </li>
@@ -2573,6 +2568,8 @@
                                     <li><a href="@Url.Action("piramalfoundation","work")"><img src="~/Content/images/piramal-foundation.jpg" alt=""><span><img src="~/Content/work/images/clients/piramal-capital-phfl.png" alt=""></span></a></li>
                                     <li><a href="@Url.Action("Phfl","work")"><img src="~/Content/images/pchf.jpg" alt=""><span><img src="~/Content/work/images/clients/piramal-housing.png" alt=""></span></a></li>
                                     <li><a href="@Url.Action("brickex","work")"><img src="~/Content/images/xms-client-brickex.png" alt=""><span><img src="~/Content/work/images/clients/brickex.png" alt=""></span></a></li>
+                                    <li><a @*href="@Url.Action("GandhiFellowship","work")"*@><img src="~/Content/images/xms-client-gandhi_feloowship.jpg" alt=""><span><img src="~/Content/work/images/clients/xms-client-gandhi_fellowship.jpg" alt=""></span></a></li>
+                                    <li><a @*href="@Url.Action("ICan","work")"*@><img src="~/Content/images/xms-client-ican.jpg" alt=""><span><img src="~/Content/work/images/clients/xms-client-ican.png" alt=""></span></a></li>
                                 </ul>
                             </div>
                         </div>
