--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -3,7 +3,7 @@
     <div class="client-works">
         <ul id="mahindra" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("MahindraTah","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/tah-thum.jpg" alt="" /> <span>Kar Bachat Yojana</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("MahindraMF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-thum.jpg" alt="" /> <span>MAHINDRA MUTUAL FUND</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("MahindraMF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-thum.jpg" alt="" /> <span>MAHINDRA MANULIFE MUTUAL FUND</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("MahindraNfoLaunches","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-info-thum.jpg" alt="" /> <span>MMF NFO Launches</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("MahindraBadhatYojana","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/badhat-yojana-thum.jpg" alt="" /> <span>MMF BADHAT YOJANA</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("MahindraUnnati","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mahindra-unnati-thum.jpg" alt="" /> <span>UNNATI EMERGING BUSINESS YOJANA</span> </a> </li>
@@ -11,7 +11,7 @@
             <li class="fadeRight t-animated" data-t-show="7"><a href="@Url.Action("MahindraPragatiYojana","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-pragati-yojana-thum.jpg" alt="" /> <span>Mahindra Pragati Yojana</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("MahindraRuralBharat","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mahindra-rural-bharat-thum.jpg" alt="" /> <span>Mahindra Rural Bharat</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="9"><a href="@Url.Action("mahindra-top-nfo","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-top250.jpg" alt="" /> <span>TOP 250 NIVESH YOJANA</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="10"><a href="@Url.Action("mmf-app","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-app-thum.jpg" alt="" /> <span>MAHINDRA MUTUAL FUND APP</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="10"><a href="@Url.Action("mmf-app","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-app-thum.jpg" alt="" /> <span>MAHINDRA MANULIFE MUTUAL FUND APP</span> </a> </li>
         </ul>
 
         <ul id="pandg" class="horizontalScroll">
