--- a/Sparkt.WebApp/Views/work/MMFApp.cshtml
+++ b/Sparkt.WebApp/Views/work/MMFApp.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="head-title floated">
                 <i class="title-icon"><img src="../Content/work/images/title-icon.png" alt="" /></i>
-                <h1>Mahindra Mutual Fund</h1>
+                <h1>Mahindra Manulife Mutual Fund</h1>
                 <div class="clear"></div>
                 <span>On the move</span>
             </div>
