--- a/Sparkt.WebApp/Views/work/MahindraMF.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraMF.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt | Mahindra Mutual Fund | MMF WEBSITE";
+    ViewBag.Title = "Sparkt | Mahindra Manulife Mutual Fund | MMF WEBSITE";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | MMF WEBSITE";
+    ViewBag.MetaTitle = "Sparkt | Mahindra Manulife Mutual Fund | MMF WEBSITE";
     ViewBag.MetaDescription = "Conversational interface for enchanced experience";
     ViewBag.MetaURL = "https://sparkt.in/work/MahindraMF";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mmf-thum.jpg";
@@ -37,7 +37,7 @@
             </div>
             <div class="head-title floated">
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
-                <h1>MAHINDRA MUTUAL FUND</h1>
+                <h1>MAHINDRA MANULIFE MUTUAL FUND</h1>
                 <div class="clear"></div>
                 <span>Conversational interface for enhanced experience</span>
             </div>          
