--- a/Sparkt.WebApp/Views/work/MahindraMFExperience.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraMFExperience.cshtml
@@ -1,43 +1,43 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt | Mahindra Mutual Fund | MMF WEBSITE";
+    ViewBag.Title = "Sparkt | Mahindra Manulife Mutual Fund | MMF WEBSITE";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | MMF WEBSITE";
+    ViewBag.MetaTitle = "Sparkt | Mahindra Manulife Mutual Fund | MMF WEBSITE";
     ViewBag.MetaDescription = "Conversational interface for enchanced experience";
     ViewBag.MetaURL = "https://sparkt.in/work/MahindraMFExperience";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mmf-thum.jpg";
 }
 @section BodyClass {mahindra}
-<script type="application/ld+json">
-    {
-    "@@context": "https://schema.org",
-    "@@type": "VideoObject",
-    "name": "Mahindra Mutual Fund Video",
-    "VideoList": [{
-    "@@type":
-    "@@id": "https://youtu.be/KhctUASVZj4",
-    "url":"https://youtu.be/KhctUASVZj4",
-    "description": "Conversational interface for enchanced experience",
-    "duration": "1M56S",
-    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/mahindra-mmf-cover.jpg",
-    "uploadDate":"05/01/2018",
-    }]
-    }
-</script>
+    <script type="application/ld+json">
+        {
+        "@@context": "https://schema.org",
+        "@@type": "VideoObject",
+        "name": "Mahindra Manulife Mutual Fund Video",
+        "VideoList": [{
+        "@@type":
+        "@@id": "https://youtu.be/KhctUASVZj4",
+        "url":"https://youtu.be/KhctUASVZj4",
+        "description": "Conversational interface for enchanced experience",
+        "duration": "1M56S",
+        "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/mahindra-manulife-cover.png",
+        "uploadDate":"05/01/2018",
+        }]
+        }
+    </script>
 <main>
     <div class="section">
         <div class="work-banner">
             <div class="banner-source">
                 <div class="banner-video">
-                    <video class="bannerplayer" poster="~/Content/work/images/banners/mahindra-mmf-cover.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                    <video class="bannerplayer" poster="~/Content/work/images/banners/mahindra-manulife-cover.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                         <source type="video/youtube" src="https://youtu.be/KhctUASVZj4" />
                     </video>
                 </div>
-                <div class="banner-image" style="background-image: url(../Content/work/images/banners/mahindra-mmf-cover.jpg);"> </div>
+                <div class="banner-image" style="background-image: url(../Content/work/images/banners/mahindra-manulife-cover.png);"> </div>
             </div>
             <div class="head-title floated">
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
-                <h1>MAHINDRA MUTUAL FUND</h1>
+                <h1>MAHINDRA MANULIFE MUTUAL FUND</h1>
                 <div class="clear"></div>
                 <span>Conversational interface for enhanced experience</span>
             </div>
