--- a/Sparkt.WebApp/Views/work/MahindraBadhatYojana.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraBadhatYojana.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt | Mahindra Mutual Fund | MMF BADHAT YOJANA";
+    ViewBag.Title = "Sparkt | Mahindra Manulife Mutual Fund | MMF BADHAT YOJANA";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | MMF BADHAT YOJANA";
+    ViewBag.MetaTitle = "Sparkt | Mahindra Manulife Mutual Fund | MMF BADHAT YOJANA";
     ViewBag.MetaDescription = "Exploring how richness is measured in Indian society";
     ViewBag.MetaURL = "https://sparkt.in/work/MahindraBadhatYojana";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/badhat-yojana-thum.jpg";
