Mahindra mf experience text change

--- a/Sparkt.WebApp/Views/work/MahindraMFExperience.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraMFExperience.cshtml
@@ -68,7 +68,7 @@
                             <div class="container">
                                 <div class="assets-title">
                                     <h3>
-                                        First of its kind, voice enabled website in the mutual fund category in the country
+                                        NEW AGE EXPERIENTIAL WEBSITE THAT RESPONDS TO USER REQUIREMENTS THROUGH DYNAMIC RESTRUCTURING
                                     </h3>
                                 </div>
                                 <div class="website-operation">
